# sha1_cracker

./: Cargo.toml  README.md
src/: main.rs
